--- a/templates/reports.html
+++ b/templates/reports.html
@@ -14,4 +14,5 @@
 <button type="button" class="btn btn-light">Select Frequency</button>
 <button type="button" class="btn btn-dark">Select Output Format</button>
 
+<iframe src="http://localhost:8888/" width="100%" height="100%"></iframe>
  {% endblock %}
