--- a/templates/about.html
+++ b/templates/about.html
@@ -28,24 +28,31 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="1" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAsILSI-7ltVjrCP11MOMyE7SfIfYgISIvrA&usqp=CAU"></svg>
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="1" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><img src = "https://i.stack.imgur.com/ajyot.jpg"></svg>
 
             <div class="card-body">
-              <p class="card-text">“The Wheel of Time turns, and Ages come and pass, leaving memories that become legend. Legend fades to myth, and even myth is long forgotten when the Age that gave it birth comes again.”
-—The Eye of the World</p>
+              <p class="card-text">“We rode on the winds of the rising storm,
+
+We ran to the sounds of the thunder.
+
+We danced among the lightning bolts,
+
+and tore the world asunder.”
+
+—Anonymous fragment of a poem believed written near the end of the previous Age, known by some as the Third Age. Sometimes attributed to the Dragon Reborn.”</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">22-2-24</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="1" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><img src="https://w7w5t4b3.rocketcdn.me/wp-content/uploads/2021/06/the-lost-hero-festus-leo-valdez.jpg"></svg>
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="1" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><img src="https://preview.redd.it/kfo05aqh9iy61.png?width=1080&crop=smart&auto=webp&s=eb5e0214c708ca6ebebc59681be4ff36f4eb78ae"></svg>
 
             <div class="card-body">
               <p class="card-text"> "All I could think of was that the teachers must've found the illegal stash of candy I'd been selling out of my dorms room. Or maybe they'd realized I got my Essay on Tom Sawyer from the Internet without ever reading the book and now they were going to take away my grade."
@@ -56,14 +63,14 @@
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">22-2-24</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="1" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><img src="https://ih0.redbubble.net/image.707522609.3696/raf,360x360,075,t,fafafa:ca443f4786.jpg"</svg>
 
             <div class="card-body">
               <p class="card-text">“If I win, I’m a prodigy. If I lose, then I’m mad. That’s the way history is written.”
@@ -73,7 +80,7 @@
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">22-2-24</small>
               </div>
             </div>
           </div>
@@ -81,16 +88,16 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="1" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><img src="https://wanderinginn.com/wp-content/uploads/2018/08/wandering_inn_final_2.png"></svg>
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">“I am Bird! Prognugator of the Free Antinium! I am unique! There are many Antinium, but the death of a Prognugator means war! Or do you not know of Klbkch the Slayer? Xrn the Small Queen? We are second only to our Queens! And I am Prognugator! I forget the rest! So tell me, is it war?”-Bird the Hunter</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">22-2-24</small>
               </div>
             </div>
           </div>
