--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
 
 
 {% block body %}
-<br>
 <h1>Home Page</h1>
 <br>
  <div class="row align-items-md-stretch">
@@ -14,7 +13,7 @@
          <div class="h-100 p-5 bg-light border rounded-3 custom-theme bg-dark">
              <h1>Welcome (or not)</h1>
              <p>Welcome to Nilores' website. It will probably change very frequently as I modify and update it. Login and authentication added!</p>
-             <p>Hopefully I will learn a lot through the making of this website. If u want to <a href="/temp">contact</a> me, welp you can't since I don't even have an official email. ~<code>Nilores</code> </p>
+             <p>Hopefully I will learn a lot through the making of this website. If u want to <a href="/temp">contact</a> me, welp you can't since I don't give out my email. ~<code>Nilores</code> </p>
              <p>
              <a class="btn btn-primary" href="/blog" role="button">Go To Blog &raquo;</a>
              </p>
